<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group2.tcss450.uw.edu.fragmentslab.FirstFragment">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/redButton"
        android:text="@string/red_fragment_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/greenButton"
        android:text="@string/green_fragment_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/blueButton"
        android:text="@string/blue_fragment_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/purpleButton"
        android:text="@string/purple_fragment_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goldButton"
        android:text="@string/gold_fragment_button"/>


</LinearLayout>
